fixing footer spacing

--- a/assets/sass/site/_common-structure.scss
+++ b/assets/sass/site/_common-structure.scss
@@ -319,7 +319,7 @@
     }
     .telephone {
       a {
-
+        margin: 0;
       }
     }
     .fax {
